# chonktxt

./: .gitignore  README.md  pyproject.toml  setup.py
chonktxt/: __init__.py  chonktxt.py
tests/: test_chonktxt.py
